added icons to the front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,19 +35,19 @@
                 </li>
                 <li>
                     <a href="./reports">
-                        <i class="fas fa-analytics"></i>
+                      <i class="fas fa-signal"></i>
                         Traffic Analysis
                     </a>
                 </li>
                 <li>
                   <a href="./reports">
-                      <i class="fas fa-signal"></i>
+                      <i class="fas fa-road"></i>
                       PotHole Detection
                   </a>
               </li>
               <li>
                 <a href="./reports">
-                    <i class="fa-file"></i>
+                  <i class="fas fa-file"></i>
                     Reports
                 </a>
             </li>
