--- a/templates/reports.html
+++ b/templates/reports.html
@@ -19,28 +19,40 @@
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>
-                        <i class="fas fa-bars"></i>
-                    DashBoard</h3>
-                
-            </div>
+          <div class="sidebar-header">
+              <h3>
+                      <i class="fas fa-bars"></i>
+                  DashBoard</h3>
+              
+          </div>
 
-            <ul class="list-unstyled components">
-                <li>
-                    <a href="/">
-                        <i class="fas fa-home"></i>
-                        Home
-                    </a>  
-                </li>
-                <li>
-                    <a href="/reports">
-                        <i class="fas fa-signal"></i>
-                        Reports
-                    </a>
-                </li>
-            </ul>
-        </nav>
+          <ul class="list-unstyled components">
+              <li>
+                  <a href="/">
+                      <i class="fas fa-home"></i>
+                      Home
+                  </a>  
+              </li>
+              <li>
+                  <a href="./reports">
+                    <i class="fas fa-signal"></i>
+                      Traffic Analysis
+                  </a>
+              </li>
+              <li>
+                <a href="./reports">
+                    <i class="fas fa-road"></i>
+                    PotHole Detection
+                </a>
+            </li>
+            <li>
+              <a href="./reports">
+                <i class="fas fa-file"></i>
+                  Reports
+              </a>
+          </li>
+          </ul>
+      </nav>
 
         <!-- Page Content Holder -->
         <div id="content">
