completely working front end

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -34,13 +34,13 @@
                     </a>  
                 </li>
                 <li>
-                    <a href="./reports">
+                    <a href="/traffic-analysis">
                       <i class="fas fa-signal"></i>
                         Traffic Analysis
                     </a>
                 </li>
                 <li>
-                  <a href="./reports">
+                  <a href="/pothole-detection">
                       <i class="fas fa-road"></i>
                       PotHole Detection
                   </a>
@@ -90,22 +90,7 @@
       
 <div id="content1">
             <h5 class="mb-5"><span class="brown">Analyze</span> Image or Footage</h2>
-                <label>Name of area</label><br>
-                <form class="form-inline">
-                    <div class="form-group mb-2">
-                        <input type="text" class="form-control mr-2 mb-2" id="staticEmail2">
-                        <button type="submit" class="btn btn-primary mb-2">Save</button>
-                    </div>
-                </form>
-                <form class="image-upload">
-                        
-                    <div class="image-upload-icon-container ">
-                      <img id="imgInput" src="../static/frontendImages/photo.png" alt="">
-                      <p class="mx-auto" id="msg">Drag and Drop<br> or Upload here</p>
-                    </div>
-                    <input type="file" id="imgUpload" class="mb-2" accept=".png, .jpg, .jpeg" onchange="validateImage()"/>
-                    <button type="submit" class="btn btn-primary mb-2">Analyze</button>
-                  </form>
+               
         </div>
         </div>
     </div>
