--- a/templates/PotHoleDetection.html
+++ b/templates/PotHoleDetection.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Reports</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+  
     <div class="wrapper">
         <!-- Sidebar  -->
         <nav id="sidebar">
@@ -71,15 +71,15 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
-                                <li class="nav-item">
+                            <li class="nav-item">
                             
-                                        <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <i class="fas fa-user" ></i>
-                                            User 2020</a>
-                                        <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" href="#">Log Out</a>
-                                                </div>
-                                        </li>
+                            <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-user" ></i>
+                                User 2020</a>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" href="#">Log Out</a>
+                                    </div>
+                            </li>
                             
                         </ul>
                     </div>
@@ -89,26 +89,45 @@
         <!-- Page Content  -->
       
 <div id="content1">
-            <h5 class="mb-5"><span class="brown">Analyze</span> Image or Footage</h5>
-            <h5>Download Report</h5>
-            <p class="text-muted">Zip contains image & word doc</p>
-              <form>
-                  <div class="d-flex mb-4">
-                    <a href="#">
-                    <div class="reportImg">
-                    <img id="imgInput" src="../static/frontendImages/zip.png" alt=""><br/>
-                    <span style="margin-left:25%!important;" href="#">1.zip</span>
-                  </div>
-                </a>
-                  </div>
-                  <a href="Downloads/1.zip" download>
-                <button type="button" class="btn btn-primary mb-2">Download</button>
-            </a>
-            </form>
+            <h5 class="mb-5"><span class="brown">Analyze</span> Image or Footage</h2>
+                <label>Name of area</label><br>
+                <form class="form-inline">
+                    <div class="form-group mb-2">
+                        <input type="text" class="form-control mr-2 mb-2" id="staticEmail2">
+                        <button type="submit" class="btn btn-primary mb-2">Save</button>
+                    </div>
+                </form>
+                <form class="image-upload">
+                        
+                    <div class="image-upload-icon-container ">
+                      <img id="imgInput" src="../static/frontendImages/photo.png" alt="">
+                      <p class="mx-auto" id="msg">Drag and Drop<br> or Upload here</p>
+                    </div>
+                    <input type="file" id="imgUpload" class="mb-2" accept=".png, .jpg, .jpeg" onchange="validateImage()"/>
+                    <button type="submit" class="btn btn-primary mb-2">Analyze</button>
+                  </form>
         </div>
         </div>
     </div>
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="imgErrModal" tabindex="-1" role="dialog" aria-labelledby="imgErrLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="imgErrLabel">Error</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                Only jpg/jpeg and png files are allowed!
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-submit" data-dismiss="modal">Dismiss</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -127,7 +146,6 @@
               </div>
             </div>
           </div>
-
     <!-- jQuery CDN - Slim version (=without AJAX) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Popper.JS -->
