--- a/templates/placesApi/placeAutoComplete.html
+++ b/templates/placesApi/placeAutoComplete.html
@@ -8,98 +8,10 @@
       type="text/javascript"
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     ></script>
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map,
-      #pano {
-        float: left;
-        height: 100%;
-        width: 50%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #description {
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-      }
-      #box {
-        width: 400px;
-        height: 300px;
-        border-style: solid;
-        border-width: 2px;
-      }
-
-      #infowindow-content .title {
-        font-weight: bold;
-      }
-
-      #infowindow-content {
-        display: none;
-      }
-
-      #map #infowindow-content {
-        display: inline;
-      }
-
-      .pac-card {
-        margin: 10px 10px 0 0;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-        background-color: #fff;
-        font-family: Roboto;
-      }
-
-      #pac-container {
-        padding-bottom: 12px;
-        margin-right: 12px;
-      }
-
-      .pac-controls {
-        display: inline-block;
-        padding: 5px 11px;
-      }
-
-      .pac-controls label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
-
-      #pac-input {
-        background-color: #fff;
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        margin-left: 12px;
-        padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-        width: 400px;
-      }
-
-      #pac-input:focus {
-        border-color: #4d90fe;
-      }
-
-      #title {
-        color: #fff;
-        background-color: #4d90fe;
-        font-size: 25px;
-        font-weight: 500;
-        padding: 6px 12px;
-      }
-    </style>
-    <script src="./hereApis/html2canvas.js"></script>
-    <script src="./saveAs.js"></script>
+    <link rel="stylesheet" href="../../static/autoComplete.css">
+   
+    <!-- <script src="./hereApis/html2canvas.js"></script>
+    <script src="./saveAs.js"></script> -->
     <!-- <script src="./hereApis/html2canvas.min.js"></script> -->
   </head>
   <body>
@@ -142,15 +54,6 @@
       <span id="place-name" class="title"></span><br />
       <span id="place-address"></span>
     </div>
-
-    <button id="btn">gere</button>
-    <div id="box"></div>
-    <a id="save"></a>
-
-    <button id="loc">getcurrentlocation</button>
-
-    <!-- https://maps.googleapis.com/maps/api/streetview?size=400x400&location=47.5763831,-122.4211769
-    &fov=80&heading=70&pitch=0 &key=AIzaSyAUs1pU8GcowyEpa_-zLt8JIupXOznc6xw -->
 
     <img
       src="http://maps.googleapis.com/maps/api/streetview?size=400x400&location=42.345573,-71.098326&fov=80&heading=70&pitch=0
