--- a/templates/PotHoleDetection.html
+++ b/templates/PotHoleDetection.html
@@ -97,17 +97,25 @@
                         <button type="submit" class="btn btn-primary mb-2">Save</button>
                     </div>
                 </form>
-                <form class="image-upload">
+                <form class="image-upload" action = "http://localhost:5000/uploader" method = "POST" enctype = "multipart/form-data" >
                         
                     <div class="image-upload-icon-container ">
                       <img id="imgInput" src="../static/frontendImages/photo.png" alt="">
                       <p class="mx-auto" id="msg">Drag and Drop<br> or Upload here</p>
                     </div>
-                    <input type="file" id="imgUpload" class="mb-2" accept=".png, .jpg, .jpeg" onchange="validateImage()"/>
+                    <input type="file" name = "file" id="imgUpload" class="mb-2" accept=".png, .jpg, .jpeg, .mp4" onchange="validateImage()"/>
                     <button type="submit" class="btn btn-primary mb-2">Analyze</button>
                   </form>
+
+                  <h5 style="margin-top: 80px;">{{ message }}</h2>
+
+                  {% for file in files %}
+                  <img src="{{ url_for('viewFiles', filename=file) }}" style="width: 200px;height:100px; ">
+                {% endfor %}
         </div>
         </div>
+
+      
     </div>
     <div class="modal fade" id="imgErrModal" tabindex="-1" role="dialog" aria-labelledby="imgErrLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
