--- a/templates/reports.html
+++ b/templates/reports.html
@@ -51,6 +51,12 @@
                   Reports
               </a>
           </li>
+          <li>
+            <a href="./email">
+              <i class="fas fa-paper-plane"></i>
+                Email
+            </a>
+        </li>
           </ul>
       </nav>
 
