--- a/static/autoComplete.css
+++ b/static/autoComplete.css
@@ -1,4 +1,4 @@
- /* Always set the map height explicitly to define the size of the div
+  /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
        #map,
        #pano {
@@ -39,6 +39,7 @@
  
        .pac-card {
          margin: 10px 10px 0 0;
+         margin-top:10vh!important;
          border-radius: 2px 0 0 2px;
          box-sizing: border-box;
          -moz-box-sizing: border-box;
@@ -46,6 +47,7 @@
          box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
          background-color: #fff;
          font-family: Roboto;
+         padding:20px;
        }
  
        #pac-container {
