--- a/templates/reports.html
+++ b/templates/reports.html
@@ -28,7 +28,7 @@
 
           <ul class="list-unstyled components">
               <li>
-                  <a href="/">
+                  <a href="/Home">
                       <i class="fas fa-home"></i>
                       Home
                   </a>  
@@ -81,7 +81,7 @@
                             
                                         <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <i class="fas fa-user" ></i>
-                                            User 2020</a>
+                                            {{username}}</a>
                                         <div class="dropdown-menu dropdown-menu-right">
                                                 <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" href="#">Log Out</a>
                                                 </div>
@@ -126,7 +126,7 @@
                   <p>Are you sure you want to log out?</p>
                 </div>
                 <div class="modal-footer">
-                  <button class="btn btn-primary" type="submit">Yes</button>
+                  <button class="btn btn-primary" type="submit"> <a  href="{{ url_for('logout') }}">Yes</a></button>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
                 </div>
               </div>
