the pothole form working well

--- a/templates/PotHoleDetection.html
+++ b/templates/PotHoleDetection.html
@@ -103,10 +103,10 @@
       <!-- Page Content  -->
 
       <div id="content1">
-        <h5 class="mb-5"><span class="brown">Analyze</span> Image or Footage</h2>
-          <form class="">
+        <h5 class="mb-5"><span class="brown">Enter</span> Details</h2>
+          <form class="" action="http://localhost:5000/uploader" method="POST" enctype="multipart/form-data">
 
-            <div class="form-group mb-2" action="http://localhost:5000/uploader" method="POST" enctype="multipart/form-data">
+            <div class="form-group mb-2" >
               <label>Name of area</label><br>
               <input type="text" name='Area' class="form-control mr-2 mb-2" id="staticEmail2">
               <label>Paved</label><br>
